--- a/_posts/2015-03-31-bmp180-display.md
+++ b/_posts/2015-03-31-bmp180-display.md
@@ -5,7 +5,7 @@ excerpt: "A Temperature/Altitude/Pressure display using the BMP180 sensor, an Ar
 tags: [Arduino, BMP510, Nokia 5110]
 categories: [Arduino, Electronics]
 comments: true
-modified: 2015-03-31
+modified: 2015-04-01
 image:
   feature: header.jpg
 ---
@@ -57,6 +57,12 @@ Here is a photo of the project assembly:
 
 You can find all files realted to this project including code,
 schematic and enclosure design at [my github link here][1].
+
+The end product turned out to be a bit bulkier than I wanted. With a
+custom PCB and a LiPo battery, I could have made something much
+smaller. I also want to find a better alternative to the laser-cut
+T-slot method - maybe combine laser cutting with 3D printing. Oh well,
+next time.
 
 [1]: https://github.com/electronut/bmp180
 [2]: https://learn.sparkfun.com/tutorials/bmp180-barometric-pressure-sensor-hookup-
