--- a/_posts/2015-03-31-bmp180-display.md
+++ b/_posts/2015-03-31-bmp180-display.md
@@ -18,7 +18,7 @@ I was in Bhutan last December, and as we travelled to different
 locations, I kept wondering what the temperature and altitude was, and
 wished I had some gizmo that would show me these values. Back home, I
 did a bit of research on altitude sensors, and one that came up was
-the cheap MEMS based BMP180 sensor. It measures temperature and
+the cheap BMP180 sensor. It measures temperature and
 pressure, and the latter can be used to calculate the altitude. It's
 been lying around with me the past few months, and now I've finally
 gotten around to building a display around it.
