--- a/_posts/2015-03-31-bmp180-display.md
+++ b/_posts/2015-03-31-bmp180-display.md
@@ -5,7 +5,7 @@ excerpt: "A Temperature/Altitude/Pressure display using the BMP180 sensor, an Ar
 tags: [Arduino, BMP510, Nokia 5110]
 categories: [Arduino, Electronics]
 comments: true
-modified: 2015-04-01
+modified: 2015-04-02
 image:
   feature: header.jpg
 ---
@@ -23,7 +23,7 @@ pressure, and the latter can be used to calculate the altitude. It's
 been lying around with me the past few months, and now I've finally
 gotten around to building a display around it.
 
-This project uses an Arduino Pro Mini clone, a BMP180 sensor and a
+This project uses an Arduino Pro Mini 3.3 V clone, a BMP180 sensor and a
 Nokia 5110 LCD module to display the current temperature, altitude and
 pressure. Here is the schematic for the project:
 
