--- a/_posts/2015-07-06-nrf51-adc-test.md
+++ b/_posts/2015-07-06-nrf51-adc-test.md
@@ -5,7 +5,7 @@ excerpt: "Getting started on nRF51822 using nRF-DK with GCC and sending LDR ADC 
 tags: [nRF51822, nRF-DK, GCC, BLE, ADC]
 categories: [Electronics]
 comments: true
-modified: 2016-07-06
+modified: 2015-07-08
 image:
   feature: header.jpg
 ---
@@ -36,7 +36,7 @@ be tempting get a cheap nRF51822 breakout board and hack with it. But
 the official kit has some major advantages:
 
 1. nRF51-DK comes with a [Segger J-Link OB][8] - built-in JTAG that
-is. This is an opportunity for learing the industry-standard way of
+is. This is an opportunity for learning the industry-standard way of
 programming, debugging and testing these kind of chips.
 2. nRF51-DK has 4 leds, 4 buttons, a coin cell holder, and female headers
 broken out for all the nRF51422 pins. A great platform for prototyping.
