--- a/_posts/2015-07-06-nrf51-adc-test.md
+++ b/_posts/2015-07-06-nrf51-adc-test.md
@@ -220,7 +220,7 @@ SoftDevice on to the chip (need to do this only once), and then
 flashing your application code on top. (We're using *S110* here, but
 Nordic has other types of SoftDevices too.)
 
-As you saw in the graphic above, just about the hardware is CMSIS,
+As you saw in the graphic above, just above the hardware is CMSIS,
 which stands for *Cortex Microcontroller Software Interface Standard*
 - this is a vendor-independent hardware abstraction layer from ARM
 that simplifies programming and reduces development time for these
