updated pwm article

--- a/_posts/2015-07-13-nrf51-pwm-test.md
+++ b/_posts/2015-07-13-nrf51-pwm-test.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: nRF51-DK PWM test with S110 SoftDevice
-excerpt: "A simple example of using PWM with softdevice S110 using the Nordic nRF51-DK."
-tags: [nRF51822, nRF-DK, BLE, PWM, softdevice, S110]
+title: nRF51-DK PWM & GPIOTE test with S110 SoftDevice
+excerpt: "A simple example of using PWM and GPIOTE with softdevice S110 using the Nordic nRF51-DK."
+tags: [nRF51822, nRF-DK, BLE, PWM, softdevice, S110, GPIOTE]
 categories: [Electronics]
 comments: true
-modified: 2015-07-13
+modified: 2015-07-14
 image:
   feature: header.jpg
 ---
@@ -20,7 +20,7 @@ setup here.
 
 ## PWM
 
-This is a simple example that demonstrates PWM and NUS (Nordic UART
+This is a simple example that demonstrates PWM, GPIOTE, and NUS (Nordic UART
 Service) using the S110 softdevice on the nRF51-DK. This example uses
 the nRF51 SDK version 9.0.0. To use it, modify
 *pca10028/s110/armgcc/Makefile* to point *SDK_ROOT* to your nRF51 SDK
@@ -35,7 +35,12 @@ LED4 on the nRF51-DK (PCA10028) board. Notice that to use these timers, I
 have enabled them in *config/nrf_drv_config.h*.
 
 When you upload this code, the LEDs will pulse as shown in the above
-video. In addition, you will also see this appear as a BLE device
+video. In addition, if you press the switches *SW1* and *SW2* on the
+board, it will toggle PWM on *LED1* and *LED2* respectively. *SW1*
+works by reading the actual value of pin 17, whereas *SW2* works using
+GPIOTE events.
+
+You will also see this appear as a BLE device
 called *PWM* and you will be able to communicate with it using UART
 over BLE using the Nordic nRFToolbox app.
 
