--- a/_posts/2015-07-20-nrf51-hcsr04.md
+++ b/_posts/2015-07-20-nrf51-hcsr04.md
@@ -10,6 +10,8 @@ image:
   feature: header.jpg
 ---
 
+![nRF51-US-RDIV](/images/2015/07/nrf51-us-rdiv.png "nRF51-US-RDIV")
+
 ![nRF51-HC-SR04](/images/2015/07/nRF51-hcsr04.jpg "nRF51-HC-SR04")
 
 ## Introduction
