--- a/_posts/2015-07-20-nrf51-hcsr04.md
+++ b/_posts/2015-07-20-nrf51-hcsr04.md
@@ -12,7 +12,7 @@ image:
 
 ![nRF51-US-RDIV](/images/2015/07/nrf51-us-rdiv.png "nRF51-US-RDIV")
 
-![nRF51-HC-SR04](/images/2015/07/nRF51-hcsr04.jpg "nRF51-HC-SR04")
+![nRF51-HC-SR04](/images/2015/07/nrf51-hcsr04.png "nRF51-HC-SR04")
 
 ## Introduction
 
