--- a/_posts/2015-10-12-blebot.md
+++ b/_posts/2015-10-12-blebot.md
@@ -48,8 +48,8 @@ Here's the list of hardware you need for this project:
 7. A LiPo battery or similar which can supply enough voltage and current for the motors and the module.
 
 The type of nRF51822 module I used is made in China, and available at
-sites like *aliexpress*, and they come with two 2x9 1.27 mm pitch
-headers. These are awefully hard to use, so I (in collaboration with
+sites like *aliexpress*, and they come with two 2x9 2 mm pitch
+headers. These are awfully hard to use, so I (in collaboration with
 my friend Sandeep) designed an adapter to make them breadboard
 friendly. These are optional for this project, but they are [available
 for purchase on Tindie][11] if you would like to check them out. In 
