--- a/_posts/2015-10-12-blebot.md
+++ b/_posts/2015-10-12-blebot.md
@@ -5,7 +5,7 @@ excerpt: "A phone controlled and autonomous robot based on Nordic nRF51822 BLE c
 tags: [BLE, robot, HC-SR04, ultrasonic, nRF51822]
 categories: [Electronics]
 comments: true
-modified: 2015-10-12
+modified: 2015-10-13
 thumbnail: images/2015/10/blebot.jpg
 image:
   feature: header.jpg
@@ -498,6 +498,10 @@ Here's BLeBot in action:
 <p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/pIaPSRHiDrM" frameborder="0" allowfullscreen></iframe>
 </p>
+
+And here's a view of some of the signals in BLEBot (Saleae Logic 8).
+
+![blebot-saleae](/images/2015/10/blebot-saleae.png "blebot-saleae")
 
 I think it's quite impressive that this tiny Nordic SoC can handle 
 an ultrasonic sensor, control two motors, blink an LED, and handle BLE 
