--- a/_posts/2016-06-04-nrf51-cordova.md
+++ b/_posts/2016-06-04-nrf51-cordova.md
@@ -6,7 +6,7 @@ tags: [nRF51822, BLE, Cordova, cloud]
 categories: [Electronics]
 comments: true
 modified: 2016-06-04
-thumbnail: images/2016/03/attiny10-finger.jpg
+thumbnail: images/2016/06/nrf51-cordova.png
 image:
   feature: header.jpg
 ---
