updated stm32 post

--- a/_posts/2016-10-07-stm32-start.md
+++ b/_posts/2016-10-07-stm32-start.md
@@ -48,7 +48,7 @@ obscenely priced - like a few thousand US dollars.(Vendors
 Fortunately, Open Source comes to the rescue again, in the form of ARM GCC, OpenOCD and Eclipse.
 You can read a [rather lengthy discussion on this topic here][5].
 
-One you have decided all of the above, you still have to make a choice on how
+Once you have decided all of the above, you still have to make a choice on how
 to structure your code - use "bare metal" (just registers + C), vendor's HAL or
 middleware, CMSIS, or maybe go "full me(n)tal" and code in assembly.
 
@@ -176,7 +176,7 @@ settings, which can be found here:
 
 ![STM32](/images/2016/10/stm32-src-filter.png)
 
-One you start using any of these files (eg. *stm32f10x_usart.c*) you need
+Once you start using any of these files (eg. *stm32f10x_usart.c*) you need
 remove that from the exclude filter above.
 
 Next, you need to set up OpenOCD for debugging. This is already covered in the
@@ -309,7 +309,7 @@ GPIO_Init(GPIOC, &gpioInitStruct);
 
 In the above code, we set up *PA5* (LED on Nucleo board) as output, and
 *PC13* (Blue button on Nucleo board) as input. As before, peripheral clocks
-and enabled for these ports.
+are enabled for these ports.
 
 Next, we set up serial communications on *USART2*.
 
