updated stm32 post

--- a/_posts/2016-10-07-stm32-start.md
+++ b/_posts/2016-10-07-stm32-start.md
@@ -106,7 +106,7 @@ Choose the appropriate chip, and then you get this dialog:
 
 ![STM32](/images/2016/10/stm32-init2.png)
 
-In *content* you can just choose empty. A the end the dialog, you will end up
+In *content* you can just choose empty. At the end the dialog, you will end up
 with a directory structure similar to the one below:
 
 {% highlight sh %}
