updated stm32 post

--- a/_posts/2016-10-07-stm32-start.md
+++ b/_posts/2016-10-07-stm32-start.md
@@ -402,8 +402,33 @@ input (expecting '1'/'0') and use that to toggle the LED on *PA*. The UART metho
 used are all defined in *stm32f10x_usart.c*, and the GPIO methods in *stm32f10x_gpio.c* -
 all part of *Standard Peripheral Library*.
 
-To test this, just open any serial communications application on your computer
-(I use *CoolTerm*.) and connect at 9600 baud and default settings.
+We'll talk a bit about the *myDelay()* function. This is implemented by
+hooking into the *SysTick_Handler* of the chip:
+
+{% highlight C %}
+{% raw %}
+static volatile uint32_t sysTickCount = 0;
+
+void myDelay(uint32_t nTime)
+{
+	sysTickCount = nTime;
+	while(sysTickCount != 0);
+}
+
+void SysTick_Handler()
+{
+	if (sysTickCount != 0) {
+		sysTickCount--;
+	}
+}
+{% endraw %}
+{% endhighlight %}
+
+Our *SysTick_Handler* overrides the default implementation in *exception_handlers.c*,
+and we use this to implement a delay function, as shown above.
+
+To test the code, upload it the chip, open any serial communications application
+on your computer (I use *CoolTerm*.), and connect at 9600 baud and default settings.
 
 The code above is far from robust. If you are using serial communications, you
 should probably use interrupts, for instance. But that's for another time.
