updated stm32 post

--- a/_posts/2016-10-07-stm32-start.md
+++ b/_posts/2016-10-07-stm32-start.md
@@ -425,7 +425,8 @@ void SysTick_Handler()
 {% endhighlight %}
 
 Our *SysTick_Handler* overrides the default implementation in *exception_handlers.c*,
-and we use this to implement a delay function, as shown above.
+and we use this to implement a delay function, as shown above. (This implementation
+  is from [Brown's book][3].)
 
 To test the code, upload it the chip, open any serial communications application
 on your computer (I use *CoolTerm*.), and connect at 9600 baud and default settings.
