added ws2812 i2s article

--- a/_posts/2017-08-18-nrf52-i2s-ws2812.md
+++ b/_posts/2017-08-18-nrf52-i2s-ws2812.md
@@ -39,7 +39,7 @@ Now, let's look at the I2S protocol.
 
 The I2S (Inter-IC Sound) was developed by Philips Semiconductor in 1986, and it's a means of transimitting 
 digital audio between devices. The Nordic nRF52832 comes built-in with an I2S peripheral, which is what 
-we are trying to leverage here. Here's an I2S signal diagram example from the nRF52832 data sheet.
+we are trying to leverage. Here's an I2S signal diagram example from the nRF52832 data sheet.
 
 ![I2S-protocol](/images/2017/08/I2S-protocol.png)
 
