added ws2812 i2s article

--- a/_posts/2017-08-18-nrf52-i2s-ws2812.md
+++ b/_posts/2017-08-18-nrf52-i2s-ws2812.md
@@ -62,7 +62,7 @@ Now let's see how to hook the hardware up.
 
 ## Hardware Hookup
 
-We need an nRF52832 board, and in this case we are using our beautiful [Bluey nRF52 dev board][3]. We'll use a 16 LED ring of WS2812Bs, and the other piece of hardware we need is a level shifter.
+We need an nRF52832 board, and in this case we are using our beautiful [Bluey nRF52 dev board][3]. We'll use a 16 LED ring of WS2812Bs, and the other piece of hardware we need is a level shifter on the SDOUT line.
 
 ![level shifter](/images/2017/08/shifter.png)
 
