--- a/_posts/2017-08-18-nrf52-i2s-ws2812.md
+++ b/_posts/2017-08-18-nrf52-i2s-ws2812.md
@@ -5,7 +5,7 @@ excerpt: "Using the I2S (Inter-IC Sound) peripheral on Nordic nRF52832 to drive 
 tags: [nRF52832, Nordic, BLE, WS2812B, LED, RGB, I2S, sound]
 categories: [Electronics]
 comments: false
-modified: 2017-08-18
+modified: 2017-08-19
 thumbnail: images/2017/08/bluey-ws2812-i2s.jpg
 ---
 
@@ -107,6 +107,17 @@ In the above code, the Tx buffer is being set according to the pattern we want t
 <script src="https://gist.github.com/electronut/382ce40be1d138bbd1ba5ee689e83344.js"></script>
 
 The above function sets up a 32 bit value for a channel (R/G/B). A channel has 8 x 4-bit codes. Code 0xe is HIGH and 0x8 is LOW. So a level of 128 would be represented as 0xe8888888. At the end, the 16 bit values need to be swapped because of the way I2S sends data - right/left channels. So for the above example, final value sent would be 0x8888e888.
+
+And here's the main loop:
+
+<script src="https://gist.github.com/electronut/0232ba246146e16da5ac4b25f8b5bc46.js"></script>
+
+In the above code, I2S is started and stopped, and the colour set based on a flags which are set in the  
+NUS (Nordic UART Serice) handler below.
+
+<script src="https://gist.github.com/electronut/b161cdec307fc711ca17c4229aa85767.js"></script>
+
+Now let's see how this all works.
 
 ## In Action
 
