--- a/_posts/2017-10-29-stm32-returns.md
+++ b/_posts/2017-10-29-stm32-returns.md
@@ -50,7 +50,7 @@ don't have to download on install anything separately.
 
 **C++**
 
-The most common coding language for microcontrollers is C, and that's what I stick to, most of the time. But having worked on complex software projects for many years, sometimes I miss a higher level of abstaction in the code. Although the first instinct might be to reject C++ as too heavy for microcontrollers, some research will show that [C++ use is quite feasible][7] - especially for 32 bit ARM chips with significant Flash/RAM. Personally, the abiloty to use classes is reason enought for me to use C++ - the code is way more organized than a C project.
+The most common coding language for microcontrollers is C, and that's what I stick to, most of the time. But having worked on complex software projects for many years, sometimes I miss a higher level of abstaction in the code. Although the first instinct might be to reject C++ as too heavy for microcontrollers, some research will show that [C++ use is quite feasible][7] - especially for 32 bit ARM chips with significant Flash/RAM. Personally, the ability to use classes is reason enought for me to use C++ - the code is way more organized than a C project.
 
 I understand that the above choices won't always fit the bill, especially if you are trying to heavily 
 optimise Flash/RAM usage on the chip. Now, on to the project.
