updated old stm art

--- a/_posts/2016-10-07-stm32-start.md
+++ b/_posts/2016-10-07-stm32-start.md
@@ -12,6 +12,19 @@ images: images/2016/10/stm32-nucleo-bo.jpg
 
 ![STM32](/images/2016/10/stm32-nucleo.jpg)
 
+<hr style="background-color: red; height: 1px; border: 0">
+<hr style="background-color: red; height: 1px; border: 0">
+
+<h3>Update</h3>
+
+Please check out my more recent article on STM32 Programming:
+
+[STM32 Returns - System Workbench, STM32Cube, C++, FreeRTOS, MAX7219 and Conway's Game of Life"
+excerpt](http://electronut.in/stm32-returns)
+
+<hr style="background-color: red; height: 1px; border: 0">
+<hr style="background-color: red; height: 1px; border: 0">
+
 ## AVR to ARM
 
 My first introduction to microcontrollers was via the Arduino platform.
